[package]
name = "pollme-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features= ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal" ] }
serde_json = "1.0"
fake = "2.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.3.4", features = ["cors"] }
