[package]
name = "pollme-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["headers"] }
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
tokio = { version = "1.21.2", features= ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal" ] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.3.4", features = ["cors"] }
fake = "2.5"
rand = "0.8"
cookie = "0.16.1"
rust-argon2 = "1.0"
dotenv = "0.15.0"